# mini-runtime

./: .gitignore  CMakeLists.txt  README.md
compiler/: CMakeLists.txt
compiler/include/Dialect/Mnrt/: CMakeLists.txt  MnrtDialect.h  MnrtOps.h  MnrtOps.td  MnrtPasses.h  MnrtPasses.td
compiler/src/Conversion/: CMakeLists.txt  ConvertMemRefToMnrt.cpp  ConvertMnrtToLLVM.cpp
compiler/src/Dialect/Mnrt/: CMakeLists.txt  MnrtDialect.cpp
compiler/tools/: CMakeLists.txt  mnrt-opt.cpp
convnet/: compile-blas.sh  compile.sh
custom-opt/: custom-opt.cpp
model/: build_model.py  compile.sh  to_mlir.py
model/add/: add.md  compile.sh
model/cnn/: cnn.md  compile-blas.sh  compile.sh  run-benchmark.sh
model/convnet/: compile-blas.sh  compile.sh  convnet.md  model.py  run.cpp
model/mobilenet/: compile.sh  model_to_mlir.py  run.cpp
runtime/: CMakeLists.txt  runner.cpp
runtime/include/: CommandBuffer.h  CpuDevice.h  MnrtDevice.h
runtime/src/: CpuDevice.cpp  runner.cpp
